force-app/main/default/objects/License__c/License__c.object-meta.xml
<CustomObject>
    <label>License</label>
    <nameField>
        <displayFormat>L-{0000000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>