force-app/main/default/objects/License__c/fields/Licensed_Seats__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Seats__c</fullName>
    <label>Licensed Seats</label>
    <length>15</length>
    <type>Text</type>
</CustomField>