force-app/main/default/objects/License__c/fields/Org_Edition__c.field-meta.xml
<CustomField>
    <fullName>Org_Edition__c</fullName>
    <label>Org Edition</label>
    <length>20</length>
    <type>Text</type>
</CustomField>