force-app/main/default/objects/License__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Version</label>
    <referenceTo>Package_Version__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Package_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>