force-app/main/default/objects/License__c/fields/Subscriber_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Org_ID__c</fullName>
    <label>Subscriber Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>