force-app/main/default/objects/License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Instance__c</columns>
    <columns>License_Status__c</columns>
    <columns>Licensed_Seats__c</columns>
    <columns>Org_Edition__c</columns>
    <columns>Subscriber_Org_ID__c</columns>
    <columns>Package_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>